# middle-out-protocol

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/core/websocket/controller/base/: interface.py
src/domain/exception/server/: model.py
src/domain/websocket/connection/: model.py
src/domain/websocket/controller/manager/: model.py
src/domain/websocket/request/: model.py
src/domain/websocket/request/args/: model.py
src/domain/websocket/request/header/: model.py
src/domain/websocket/request/id/: model.py
src/domain/websocket/request/method/: enum.py
src/domain/websocket/request/route/: model.py
src/domain/websocket/response/code/: enum.py
src/domain/websocket/route/method/: model.py
src/domain/websocket/router/: model.py
src/domain/websocket/router/function/: model.py
src/domain/websocket/router/gateway/: model.py
src/domain/websocket/router/method/: model.py
src/domain/websocket/router/resolver/: model.py
src/domain/websocket/router/route/: model.py
src/domain/websocket/router/suite/: model.py
src/domain/websocket/subprotocol/: model.py
src/domain/websocket/subprotocol/name/: model.py
src/websocket/controller/get/: websocket.py
src/websocket/server/: websocket.py
tests/domain/websocket/connection/: test_model.py
tests/domain/websocket/controller/manager/: test_model.py
tests/domain/websocket/request/: test_model.py
tests/domain/websocket/router/: model.py  test_model.py
tests/domain/websocket/subprotocol/: test_model.py
tests/websocket/server/: websocket.py
(+14 files in other folders)
