[tool.poetry]
name = "middle-out-protocol"
version = "0.1.0"
description = ""
authors = ["Igor Magro <iggormagro8@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
