[tool.poetry]
name = "middle-out-protocol"
version = "0.1.0"
description = ""
authors = ["Igor Magro <iggormagro8@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "unit: A suit of unit tests"
]