[tool.poetry]
name = "middle-out-protocol"
version = "0.1.0"
description = ""
authors = ["Igor Magro <iggormagro8@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.4"
loglifos = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pre-commit = "^3.0.4"
pylint = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "unit: A suit of unit tests"
]